# dependency-heaven

./: DEMO_SCRIPT.md  ExampleJsons.md  README.md  main copy.py  main.py  package-lock.json  package.json  pyproject.toml
src/app/: globals.css  layout.tsx  page.tsx
src/app/analyzer/: page.tsx
src/app/dashboard/: page.tsx
src/components/: AnalysisPanel.tsx  DependencyVisualization.tsx  IssuesList.tsx  Navbar.tsx  PackageInputs.tsx  PackagesList.tsx  StatsGrid.tsx  VisualizationControls.tsx
src/hook/: useGitHubRepos.ts
src/types/: package.ts
